# MPC

./: CMakeLists.txt  matrix.py  matrix_power.py  mpc.py  mpc2.py  qp.py  sample.py  sample2.py  sample3.py  sample4.py
NMPC/: CMakeLists.txt  a.out  mpc  mpc.cpp  nmpc.cpp  nmpc_two_wheel.cpp  sample.cpp  sample.py  sample2.py
qiita/: a.out  first_order_lag.py  qiita_mpc.py  qiita_nmpc.py  qiita_nmpc2.py  sample.cpp  sample.py  sample2.cpp  sample3.cpp
